# hai-dates-tech-task

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  build.sh  ci.yaml  main.py  pyproject.toml  release.yml
.devcontainer/: devcontainer.json
.github/workflows/: 1_test.yml  1_tests.yml  2_coverage.yml  3_linting.yml  6_pypi_release.yml  cd.yml  ci.yaml  ci.yml  release.yml
app/: date.py  dates.py
dates/: date_diff.py  dates.py  dates_utils.py  utils.py
tests/: test_date_diff.py  test_date_utils.py  test_utils.py
