[tool.poetry]
name = "hai-dates-tech-task"
version = "0.1.0"
description = "Harrison.ai dates tech task"
authors = ["Elmi de Lange"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
