[tool.poetry]
name = "dates"
version = "0.2.0"
description = "Harrison.ai dates tech task"
authors = ["Elmi de Lange"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
commitizen = "^2.21.2"
pre-commit = "^2.17.0"
pylint = "^2.13.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "dates/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
